ontapi: update dependencies (owl-api:5.5.1, etc); fix tests accordingly + cosmetic changes